DM-4965: fix ellipses truncation on homepage search

--- a/app/assets/stylesheets/dm/pages/_home.scss
+++ b/app/assets/stylesheets/dm/pages/_home.scss
@@ -73,6 +73,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        display: block;
 
         &:hover,
         &:active,
